--- a/HTML/homePage.html
+++ b/HTML/homePage.html
@@ -34,7 +34,7 @@
     <div class="wellcom">
         <div class="container">
             <div class="text">
-                <p><span>welcome</span> you all to our academy. You are a 
+                <p><span>wellcome</span> you all to our academy. You are a 
                       bundle of limitless possibilities. Each day 
                       comes with opportunities to bring out the best in you.
                       Make each day count!</p>
@@ -45,28 +45,26 @@
         </div>
     </div>
     <!-- wellcom -->
-    <div class="bigcont">
+    
     <div class="training">
         <h1>About Training</h1>
         <div class="container">
-            <p>This academy was established by
-                 a great team that seeks to be an
-                  academic reference for website development
-                   and design enthusiasts, and offers short exams 
-                   to ensure that the student understands the subject
-                    in general to prepare him to enter the course</p>    
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                Debitis enim a maiores, laboriosam suscipit ipsa. Numquam quam 
+                nesciunt provident doloribus suscipit et commodi,
+                 omnis aspernatur tempore maxime, dolor incidunt iure!</p>    
         </div>
-    </div></div>
+    </div>
     <!-- wellcom -->
 
     <div class="quiz ">
-        <h1>Quiz</h1>
+        <h1>Quize</h1>
         <div class="container">
             <div class="card">
                 <div class="image"><img src="../Image/Customer Survey-amico.png" alt=""></div>
                 <div class="text">
                     <p>
-                        Start Quiz
+                        Start Quize
                         Test your knowledge with DIV academy  
                         and Find out your CSS level by taking our quiz
                     </p>
