--- a/HTML/result.html
+++ b/HTML/result.html
@@ -32,20 +32,20 @@
                 <h3 style="text-align: center;"> Your Score</h3>
                 <div class="answerDiv">
                     <div class="correctAnswer">
-                    <h4 > Correct Answer</h4>
+                    <h4 > Correct Ansawer</h4>
                     <p id="numCorrectAns"></p><br>
                     <i class="fa-solid fa-circle-check" style="color: rgb(16, 184, 16);font-size: larger;"></i>
                     </div>
                     <div class="wrongAnswer">
-                        <h4 > Wrong Answer</h4>
+                        <h4 > Wrong Ansawer</h4>
                         <p id="numWrongAns"></p><br>
-                        <i class="fa-solid fa-xmark"style=" color:white; font-size: larger;"></i>
+                        <i class="fa-solid fa-xmark"style=" color:red; font-size: larger;"></i>
                     </div>                
                 </div>
             </div>  <br>   
         </div>
         <div class="btnShow">
-            <button class="showAnsBtn" > <a href="../HTML/showAnsawerPage.html" class="showAnsBtn">Show Answer</a> </button>
+            <button class="showAnsBtn" > <a href="../HTML/showAnsawerPage.html" class="showAnsBtn">Show Ansawer</a> </button>
         </div>   <br>
         <script  type="text/javascript" src="../JS/result.js" ></script>    
     </main>
