--- a/HTML/showAnsawerPage.html
+++ b/HTML/showAnsawerPage.html
@@ -25,7 +25,6 @@
     </header> 
 
     <div class="level"><h2 >Imitate level</h2></div>
-    <div class="bigcontainer">
     <div class="qcontain">
        
         <div class="child"><h3 class="blue">Q1 The full form of CSS is?</h3>
@@ -35,7 +34,7 @@
             <li class="red">Color and Style Sheets</li>
             <li class="red">None of the above</li>
         </ol>
-        <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+        <p class="blue">your answer is:<p> </p></p>
     </div>
 
         <div class="child"> <h3 class="blue">Q2 How can we change the background color of an element?</h3>
@@ -45,7 +44,7 @@
                 <li class="red">Both A and B</li>
                 <li class="red">None of the above</li>
             </ol>
-            <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+            <p class="blue">your answer is:<p> </p></p>
         </div>
 
         <div class="child"> <h3 class="blue">Q3 How can we change the text color of an element?</h3>
@@ -55,7 +54,7 @@
                 <li class="red">Both A and B</li>
                 <li class="red">None of the above</li>
             </ol>
-            <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+            <p class="blue">your answer is:<p> </p></p>
         </div>
 
          <div class="child"> <h3 class="blue">Q4 How do you insert a comment in a CSS file?</h3>
@@ -65,11 +64,10 @@
                 <li class="red">/*this is comment</li>
                 <li class="red">'this is comment</li>
             </ol>
-            <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+            <p class="blue">your answer is:<p> </p></p>
         </div>
 
     </div>
-</div>
     <hr>
     <div class="level"><h2>Adapt level</h2></div>
     <div class="qcontain"> 
@@ -81,7 +79,7 @@
             <li class="red">Top, Bottom, Right, Left</li>
             <li class="red">Right, Left, Top, Bottom</li>
         </ol>
-        <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+        <p class="blue">your answer is:<p> </p></p>
     </div>
 
         <div class="child"> <h3 class="blue">Q6 Can negative values be allowed in padding property?</h3>
@@ -91,7 +89,7 @@
                 <li class="red">depends on properety</li>
                 <li class="red">none of the above</li>
             </ol>
-            <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+            <p class="blue">your answer is:<p> </p></p>
         </div>
 
         <div class="child"> <h3 class="blue">Q7 Which HTML tag is used to declare internal CSS?</h3>
@@ -101,7 +99,7 @@
                 <li class="red">&lt script &gt</li>
                 <li class="red">none of the above</li>
             </ol>
-            <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+            <p class="blue">your answer is:<p> </p></p>
         </div>
 
          <div class="child"> <h3 class="blue">Q8 The CSS property used to specify the transparency of an element is?</h3>
@@ -111,7 +109,7 @@
                 <li class="red">filter</li>
                 <li class="red">none of the above</li>
             </ol>
-            <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+            <p class="blue">your answer is:<p> </p></p>
         </div>
 
         <div class="child"> <h3 class="blue">Q9 What type of CSS is generally recommended for designing large web pages?</h3>
@@ -121,7 +119,7 @@
                 <li class="green">external</li>
                 <li class="red">none of the above</li>
             </ol>
-            <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+            <p class="blue">your answer is:<p> </p></p>
         </div>
 
          <div class="child"> <h3 class="blue">Q10 The CSS property used to draw a line around the elements outside the border?</h3>
@@ -131,7 +129,7 @@
                 <li class="green">padding</li>
                 <li class="red">line</li>
             </ol>
-            <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+            <p class="blue">your answer is:<p> </p></p>
         </div>
 
     </div>
@@ -147,7 +145,7 @@
             <li class="red">bold</li>
             <li class="red">none of the above</li>
         </ol>
-        <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+        <p class="blue">your answer is:<p> </p></p>
     </div>
 
         <div class="child"> <h3 class="blue">Q12 Which CSS property specifies the painting area of the background?</h3>
@@ -157,7 +155,7 @@
                 <li class="red">background-image</li>
                 <li class="red">none of the above</li>
             </ol>
-            <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+            <p class="blue">your answer is:<p> </p></p>
         </div>
 
         <div class="child"> <h3 class="blue">Q13  How to select the elements with the class name "example"?</h3>
@@ -167,7 +165,7 @@
                 <li class="green">.example</li>
                 <li class="red">Class example</li>
             </ol>
-            <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+            <p class="blue">your answer is:<p> </p></p>
         </div>
 
          <div class="child"> <h3 class="blue">Q14 Which of the following is the correct syntax to select all paragraph elements in a div element?</h3>
@@ -177,7 +175,7 @@
                 <li class="red">div#p</li>
                 <li class="red">div ~ p</li>
             </ol>
-            <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+            <p class="blue">your answer is:<p> </p></p>
         </div>
 
         <div class="child"> <h3 class="blue">Q15 Which of the following CSS property is used to add stroke to the text?</h3>
@@ -187,7 +185,7 @@
                 <li class="red">text-decoration property</li>
                 <li class="red">None of the above</li>
             </ol>
-            <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+            <p class="blue">your answer is:<p> </p></p>
         </div>
 
         <div class="child"> <h3 class="blue">Q16 The CSS property used to specify the transparency of an element is?</h3>
@@ -197,7 +195,7 @@
                 <li class="green">clearfix</li>
                 <li class="red">overlay</li>
             </ol>
-            <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+            <p class="blue">your answer is:<p> </p></p>
         </div>
 
          <div class="child"> <h3 class="blue">Q17 Which CSS property controls the text size?</h3>
@@ -207,7 +205,7 @@
                 <li class="green">font-size</li>
                 <li class="red">font-style</li>
             </ol>
-            <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+            <p class="blue">your answer is:<p> </p></p>
         </div>
 
         <div class="child"> <h3 class="blue">Q18 Which of the following CSS framework is used to create a responsive design? </h3>
@@ -217,7 +215,7 @@
                 <li class="red">larawell</li>
                 <li class="green">bootstrap</li>
             </ol>
-            <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+            <p class="blue">your answer is:<p> </p></p>
         </div>
 
          <div class="child"> <h3 class="blue">Q19 Which of the following is an appropriate value for the overflow element?</h3>
@@ -227,7 +225,7 @@
                 <li class="red">auto</li>
                 <li class="green">all of the mentioned</li>
             </ol>
-            <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+            <p class="blue">your answer is:<p> </p></p>
         </div>
 
         <div class="child"> <h3 class="blue">Q20 The default value of "position" attribute is </h3>
@@ -237,7 +235,7 @@
                 <li class="red">inherit</li>
                 <li class="red">absolute</li>
             </ol>
-            <p class="blue">your answer is:<p class="userAnswer"> </p></p>
+            <p class="blue">your answer is:<p> </p></p>
         </div>
 
 
@@ -282,16 +280,6 @@
                 </div>
                
    </footer> 
-  
-   <script>
-     let userAnswers = JSON.parse(localStorage.getItem("userAnswers"));
-     let setUserAnswers = document.getElementsByClassName("userAnswer");
-     console.log(userAnswers);
-     console.log(setUserAnswers);
 
-     for(let i =0 ; i <setUserAnswers.length ; i++){
-        setUserAnswers[i].innerHTML = userAnswers[i];  
-     }
-   </script>
 </body>
 </html>
