--- a/HTML/thanks.html
+++ b/HTML/thanks.html
@@ -23,11 +23,11 @@
 </div>
 <div class="thanks">
 
-    <span class="received">Your submission has been received</span><span id="correct"><img class="correc" src="../Image/thanks1.png"width="30px" >
+    <span class="received">Your submission has been received</span><span id="correct"><img class="correc" src="../Image/thanks1.png width="30px" >
     <div class="result">
         <div class="ok"></div>
     <div class="your-answer"><p>Thank you For Give Answer</p></div>
-    <div class="show"><a href="result.html" id="abtn">  show your Result</a> </div>
+    <div class="show"><a href="result.html" id="abtn">  show yor Result</a> </div>
 </div>
 </div>
 
